add OpenAPI schema for @action
